--- a/src/deployr-app/Dockerfile
+++ b/src/deployr-app/Dockerfile
@@ -1,9 +1,9 @@
-FROM microsoft/dotnet:2.2-aspnetcore-runtime-stretch-slim AS base
+FROM mcr.microsoft.com/dotnet/core/aspnet:2.2 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM microsoft/dotnet:2.2-sdk-stretch AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
 WORKDIR /build
 COPY ["src/deployr-app/Deployr.App.csproj", "src/deployr-app/"]
 RUN dotnet restore "src/deployr-app/Deployr.App.csproj"
