--- a/src/deployr-app/app/package.json
+++ b/src/deployr-app/app/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "buefy": "^0.7.3",
     "typescript": "^3.3.3333",
     "vue": "^2.6.9",
     "vue-class-component": "^7.0.0",
