--- a/src/deployr-app/app/package.json
+++ b/src/deployr-app/app/package.json
@@ -9,17 +9,18 @@
   },
   "dependencies": {
     "buefy": "^0.7.3",
-    "typescript": "^3.3.4000",
+    "typescript": "^3.4.1",
     "vue": "^2.6.10",
-    "vue-class-component": "^7.0.0",
+    "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-typescript": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
+    "@vue/cli-plugin-babel": "^3.5.3",
+    "@vue/cli-plugin-typescript": "^3.5.3",
+    "@vue/cli-service": "^3.5.3",
     "fibers": "^3.1.1",
     "lint-staged": "^8.1.0",
     "sass": "^1.17.3",
